Fixed navbar logo on mobile devices

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -10,6 +10,7 @@
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    text-align: center;
 }
 
 .navbar .logo {
@@ -17,7 +18,6 @@
     color: #363657;
     cursor: default;
     font-weight: 600;
-
 }
 
 .navbar .menu {
